fix wrapping of long URIs

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -41,7 +41,7 @@ pre code {
     line-height: 1;
     word-wrap: normal;
     overflow-wrap: normal;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .tabbed-example .content > div:last-child,
